[package]
name = "wallet_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = "1.0.1"
rand = "0.7.3"        # Use compatible version with ed25519-dalek 1.0.1
sha2 = "0.9.9"        # Use compatible version
base58 = "0.1.0"
hex = "0.4.3"   